src/tests/snapshots/cargo_vet__tests__import__import_multiple_versions.snap
---
source: src/tests/import.rs
expression: output
---
+
+[[audits.peer-company.audits.third-core]]
+criteria = "safe-to-deploy"
+version = "5.0.0"
+
+[[audits.peer-company.audits.third-core]]
+criteria = "safe-to-deploy"
+version = "10.0.0"

