src/tests/snapshots/cargo_vet__tests__import__import_subsumed_by_local_wildcard_audit.snap
---
source: src/tests/import.rs
expression: output
---
 
 [[publisher.third-party2]]
 version = "10.0.0"
 when = "2022-12-15"
 user-id = 1
 user-login = "user1"
 user-name = "User One"
 
-[[audits.peer-company.wildcard-audits.third-party2]]
-criteria = "safe-to-deploy"
-user-id = 1 # User One (user1)
-start = "2022-12-01"
-end = "2023-01-01"
-
-[[audits.peer-company.audits.third-party2]]
-criteria = "safe-to-deploy"
-version = "10.0.0"
+[audits.peer-company.audits]

