src/tests/snapshots/cargo_vet__tests__import__import_wildcard_audit_publisher.snap
---
source: src/tests/import.rs
expression: output
---
 
+[[publisher.third-party1]]
+version = "10.0.0"
+when = "2022-12-12"
+user-id = 2
+user-login = "user2"
+user-name = "User Two"
+
+[[publisher.third-party2]]
+version = "10.0.0"
+when = "2022-12-12"
+user-id = 1
+user-login = "user1"
+user-name = "User One"
+
+[[audits.peer-company.wildcard-audits.third-party1]]
+criteria = "safe-to-deploy"
+user-id = 2
+start = "2022-12-01"
+end = "2023-01-01"
+
 [audits.peer-company.audits]

