src/tests/snapshots/cargo_vet__tests__import__local_wildcard_audit_preferred_to_fresh_import.snap
---
source: src/tests/import.rs
expression: output
---
+
+[[publisher.third-party2]]
+version = "10.0.0"
+when = "2022-12-15"
+user-id = 1
+user-login = "user1"
+user-name = "User One"
+
+[audits.peer-company.audits]

