src/tests/snapshots/cargo_vet__tests__import__new_audit_for_unused_criteria_basic.snap
---
source: src/tests/import.rs
expression: output
---
 
 [audits.peer-company.criteria.fuzzed]
 description = "fuzzed"
 
 [[audits.peer-company.audits.third-party2]]
 criteria = "safe-to-deploy"
 version = "10.0.0"

