src/tests/snapshots/cargo_vet__tests__import__new_audit_needed_violation.snap
---
source: src/tests/import.rs
expression: output
---
+
+[[audits.peer-company.audits.third-party2]]
+criteria = "safe-to-deploy"
+violation = "10.*"

