src/tests/snapshots/cargo_vet__tests__import__new_audit_unneeded_violation.snap
---
source: src/tests/import.rs
expression: output
---
+
+[[audits.peer-company.audits.third-party2]]
+criteria = "safe-to-deploy"
+version = "10.0.0"

