src/tests/snapshots/cargo_vet__tests__import__new_peer_import.snap
---
source: src/tests/import.rs
expression: output
---
 
+[[audits.peer-company.audits.third-party2]]
+criteria = "safe-to-deploy"
+delta = "100.0.0 -> 200.0.0"
+
 [audits.rival-company.audits]

