src/tests/snapshots/cargo_vet__tests__import__old_import_preferred_audits.snap
---
source: src/tests/import.rs
expression: output
---
 
 [[audits.peer-company.audits.third-party2]]
 criteria = "safe-to-deploy"
 version = "5.0.0"
 
 [[audits.peer-company.audits.third-party2]]
 criteria = "safe-to-deploy"
 delta = "5.0.0 -> 6.0.0"
 
 [[audits.peer-company.audits.third-party2]]
 criteria = "safe-to-deploy"
 delta = "6.0.0 -> 10.0.0"
+
+[audits.rival-company.audits]

